# fatloss-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  alembic.ini  desktop_ui_implementation.md  pyproject.toml  业务逻辑参考.md  实施计划.md
alembic/: env.py
alembic/versions/: 3e91eaef9bd7_initial.py
data/: schema.sql
docs/: DEVELOPMENT.md  README.md  desktop_ui_implementation.md  phase4_testing_plan.md  实施计划.md  项目结构.txt
scripts/: init_db.py  test_desktop.sh
src/fatloss/calculator/: bmr_calculator.py  nutrition_calculator.py  tdee_calculator.py  time_predictor.py  validation.py
src/fatloss/cli/: main.py
src/fatloss/cli/commands/: __init__.py  adjust.py  calculate.py  config.py  export.py  plan.py  user.py  weight.py
src/fatloss/desktop/: __init__.py  main.py
src/fatloss/desktop/controllers/: __init__.py  dashboard_controller.py  main_controller.py  nutrition_controller.py  plan_controller.py  settings_controller.py  user_controller.py  weight_controller.py
src/fatloss/desktop/models/: __init__.py  nutrition_table_model.py  user_table_model.py  weight_table_model.py
src/fatloss/desktop/utils/: __init__.py  error_handler.py
src/fatloss/desktop/views/: __init__.py  main_window.py
src/fatloss/desktop/views/dialogs/: __init__.py  nutrition_dialog.py  user_dialog.py
src/fatloss/desktop/views/widgets/: __init__.py  dashboard_tab.py  nutrition_calculator_tab.py  (+4 more)
src/fatloss/models/: app_config.py  enums.py  nutrition_plan.py  user_profile.py  weight_record.py
src/fatloss/planner/: __init__.py  planner_service.py
src/fatloss/repository/: __init__.py  abstract_repository.py  app_config_repository.py  database.py  mapper.py  models.py  nutrition_repository.py  sqlalchemy_repository.py  unit_of_work.py  user_repository.py  weight_repository.py
src/fatloss/scripts/: init_db.py
src/fatloss/utils/: validation.py
tests/: conftest.py
tests/desktop/: conftest.py  factories.py
tests/desktop/unit/test_controllers/: test_dashboard_controller.py  test_main_controller.py  test_nutrition_controller.py  test_plan_controller.py  test_settings_controller.py  test_user_controller.py  test_weight_controller.py
tests/desktop/unit/test_models/: test_nutrition_table_model.py  test_user_table_model.py  test_weight_table_model.py
tests/desktop/unit/test_utils/: test_error_handler.py
tests/desktop/unit/test_views/: test_dashboard_tab.py  test_main_window.py  test_nutrition_calculator_tab.py  test_plan_management_tab.py  test_settings_tab.py  test_user_management_tab.py  test_weight_tracking_tab.py
tests/e2e/test_cli/: test_commands.py
tests/integration/test_planner/: test_planner_service.py
tests/integration/test_repository/: test_app_config_repository.py  test_nutrition_repository.py  test_unit_of_work.py  test_user_repository.py  test_weight_repository.py
tests/unit/: test_database.py
tests/unit/test_calculator/: test_bmr_calculator.py  test_nutrition_calculator.py  test_tdee_calculator.py  test_time_predictor.py
tests/unit/test_cli/: test_adjust.py  test_calculate.py  test_config.py  test_export.py  test_plan.py  test_user.py  test_weight.py
tests/unit/test_models/: test_enums.py  test_nutrition_plan.py  test_user_profile.py  test_weight_record.py
tests/unit/test_repository/: test_mapper.py  test_sqlalchemy_repository.py
tests/unit/test_utils/: test_validation.py
